# mesh

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  cluster.toml  mesh-a.toml  mesh-b.toml  mesh-c.toml  mesh.toml  peer1.toml  peer2.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  driver-matrix-full.yml  release-plz.yml  release.yml
crates/mesh-bolt/: Cargo.toml
crates/mesh-bolt/src/: error.rs  framing.rs  handshake.rs  lib.rs  message.rs  value.rs
crates/mesh-client/: Cargo.toml  README.md
crates/mesh-client/src/: app.rs  config.rs  main.rs
crates/mesh-client/src/backend/: bolt.rs  falkor.rs  mod.rs
crates/mesh-client/src/ui/: graph.rs  mod.rs  repl.rs  schema.rs
crates/mesh-cluster/: Cargo.toml
crates/mesh-cluster/src/: cluster.rs  error.rs  lib.rs  membership.rs  partition_map.rs  partitioner.rs  raft.rs  state.rs
crates/mesh-cluster/tests/: cluster_tests.rs
crates/mesh-core/: Cargo.toml
crates/mesh-core/src/: edge.rs  id.rs  lib.rs  node.rs  property.rs
crates/mesh-cypher/: Cargo.toml
crates/mesh-cypher/examples/: dbg.rs
crates/mesh-cypher/src/: ast.rs  cypher.pest  error.rs  lib.rs  parser.rs  plan.rs
crates/mesh-cypher/tests/: parser_tests.rs
crates/mesh-executor/: Cargo.toml
crates/mesh-executor/src/: error.rs  eval.rs  lib.rs  ops.rs  procedures.rs  reader.rs  value.rs  writer.rs
crates/mesh-executor/tests/: integration.rs
crates/mesh-rpc/: Cargo.toml
crates/mesh-rpc/proto/: mesh.proto
crates/mesh-rpc/src/: convert.rs  coordinator_log.rs  executor_writer.rs  lib.rs  metrics.rs  partitioned_reader.rs  raft_applier.rs  raft_network.rs  raft_service.rs  routing.rs  routing_writer.rs  server.rs  staging.rs  tls.rs  tx_coordinator.rs  tx_overlay.rs
crates/mesh-rpc/tests/: integration.rs  raft_graph_integration.rs  raft_integration.rs  tracing_instrumentation.rs
crates/mesh-server/: Cargo.toml
crates/mesh-server/src/: bolt.rs  config.rs  lib.rs  main.rs  metrics.rs  value_conv.rs
crates/mesh-server/tests/: bolt.rs  bolt_tls.rs  grpc_tls.rs  integration.rs  value_conv_roundtrip.rs
crates/mesh-storage/: Cargo.toml
crates/mesh-storage/src/: engine.rs  error.rs  keys.rs  lib.rs  rocksdb_engine.rs  store.rs
crates/mesh-storage/tests/: store_tests.rs
crates/mesh-tck/: Cargo.toml
crates/mesh-tck/src/: lib.rs
crates/mesh-tck/tests/: tck.rs
crates/meshdb-apoc/: Cargo.toml
crates/meshdb-apoc/src/: coll.rs  convert.rs  create.rs  date.rs  lib.rs  map.rs  meta.rs  number.rs  text.rs  util.rs
crates/meshdb-bolt/: Cargo.toml
crates/meshdb-bolt/src/: error.rs  handshake.rs  lib.rs  message.rs  packstream.rs
crates/meshdb-client/: Cargo.toml  README.md
crates/meshdb-client/src/: config.rs  main.rs
crates/meshdb-client/src/backend/: bolt.rs
crates/meshdb-client/src/ui/: graph.rs  mod.rs  repl.rs  schema.rs
crates/meshdb-cluster/: Cargo.toml
crates/meshdb-cluster/src/: cluster.rs  error.rs  lib.rs  membership.rs  partition_map.rs  partitioner.rs  raft.rs  state.rs
crates/meshdb-cluster/tests/: cluster_tests.rs
crates/meshdb-core/: Cargo.toml
crates/meshdb-core/src/: error.rs  id.rs  lib.rs  node.rs  property.rs
crates/meshdb-cypher/: Cargo.toml
crates/meshdb-cypher/src/: ast.rs  cypher.pest  error.rs  lib.rs  parser.rs  plan.rs
crates/meshdb-cypher/tests/: parser_tests.rs
crates/meshdb-executor/: Cargo.toml
crates/meshdb-executor/src/: apoc_cypher.rs  apoc_export.rs  apoc_load.rs  apoc_path.rs  apoc_trigger.rs  error.rs  eval.rs  lib.rs  ops.rs  procedures.rs  reader.rs  value.rs  writer.rs
crates/meshdb-executor/tests/: integration.rs
crates/meshdb-rpc/: Cargo.toml  build.rs
crates/meshdb-rpc/benches/: query_bench.rs
crates/meshdb-rpc/proto/: mesh.proto
crates/meshdb-rpc/src/: audit_log.rs  cluster_auth.rs  convert.rs  coordinator_log.rs  error.rs  executor_writer.rs  fault_points.rs  idempotency.rs  lib.rs  metrics.rs  multi_raft_applier.rs  multi_raft_cluster.rs  multi_raft_reader.rs  participant_log.rs  partitioned_reader.rs  plan_cache.rs  raft_applier.rs  raft_network.rs  raft_service.rs  routing.rs  routing_writer.rs  server.rs  staging.rs  tls.rs  tx_coordinator.rs  tx_overlay.rs
crates/meshdb-rpc/tests/: integration.rs  raft_graph_integration.rs  raft_integration.rs  tracing_instrumentation.rs
crates/meshdb-server/: Cargo.toml
crates/meshdb-server/benches/: multi_raft_bench.rs
crates/meshdb-server/src/: bolt.rs  config.rs  lib.rs  main.rs  metrics.rs  tls_reload.rs  value_conv.rs
crates/meshdb-server/tests/: bolt.rs  bolt_tls.rs  grpc_tls.rs  integration.rs  multi_raft.rs  multi_raft_fault_injection.rs  two_pc_fault_injection.rs  value_conv_roundtrip.rs
crates/meshdb-storage/: Cargo.toml
crates/meshdb-storage/benches/: storage_bench.rs
crates/meshdb-storage/src/: engine.rs  error.rs  keys.rs  lib.rs  rocksdb_engine.rs
crates/meshdb-storage/tests/: store_tests.rs
crates/meshdb-tck/: Cargo.toml
crates/meshdb-tck/tests/: tck.rs
deploy/: README.md  RUNBOOK.md
deploy/grafana/: meshdb-cluster.json
deploy/k8s/: configmap.yaml  pdb.yaml  service.yaml  statefulset.yaml
deploy/prometheus/: alerts.yaml
docker/: entrypoint.sh  meshdb.toml
drivers/: .gitignore  README.md  run-matrix.sh
drivers/common/: gen-cert.sh  server-auth.toml  server-bolt44.toml  server-bolt50.toml  server-bolt54.toml  server-tls.toml  server.toml
drivers/go/: README.md  go.mod  helpers_test.go  parity_test.go  smoke_test.go
drivers/java/: README.md  pom.xml
drivers/java/src/test/java/mesh/: Connection.java  ParityTest.java  SmokeTest.java
drivers/js/: README.md  package-lock.json  package.json
drivers/js/test/: helpers.js  parity.test.js  smoke.test.js
drivers/python/: README.md  conftest.py  requirements.txt  test_parity.py  test_smoke.py
tck/opencypher/: .gitignore
tck/opencypher/tck/features/clauses/match/: Match5.feature
