[workspace]
resolver = "2"
members = [
    "crates/mesh-core",
    "crates/mesh-storage",
    "crates/mesh-cypher",
    "crates/mesh-executor",
    "crates/mesh-rpc",
    "crates/mesh-cluster",
    "crates/mesh-bolt",
    "crates/mesh-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.13", default-features = false }
bcrypt = { version = "0.15", default-features = false, features = ["std"] }
# chrono: only pulled in for ISO 8601 / RFC 3339 string parsing in
# the mesh-executor temporal scalar functions (`datetime(string)`,
# `date(string)`). Storage and wire formats use raw epoch counts, so
# chrono never touches the persistence path.
chrono = { version = "0.4", default-features = false, features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
