[workspace]
resolver = "2"
members = [
    "crates/mesh-core",
    "crates/mesh-storage",
    "crates/mesh-cypher",
    "crates/mesh-executor",
    "crates/mesh-rpc",
    "crates/mesh-cluster",
    "crates/mesh-bolt",
    "crates/mesh-client",
    "crates/mesh-server",
    "crates/mesh-tck",
]

[workspace.package]
name = "meshdb"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.13", default-features = false }
bcrypt = { version = "0.15", default-features = false, features = ["std"] }
# chrono: only pulled in for ISO 8601 / RFC 3339 string parsing in
# the mesh-executor temporal scalar functions (`datetime(string)`,
# `date(string)`). Storage and wire formats use raw epoch counts, so
# chrono never touches the persistence path.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# chrono-tz: IANA zone database used by `datetime({..., timezone:
# 'Europe/Stockholm'})`. Resolves the instant-specific offset at the
# supplied wall-clock and round-trips the region name through the
# `[Region/City]` suffix on output.
chrono-tz = { version = "0.10", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
