[workspace]
resolver = "2"
members = [
    "crates/meshdb-core",
    "crates/meshdb-storage",
    "crates/meshdb-cypher",
    "crates/meshdb-executor",
    "crates/meshdb-rpc",
    "crates/meshdb-cluster",
    "crates/meshdb-bolt",
    "crates/meshdb-client",
    "crates/meshdb-server",
    "crates/meshdb-tck",
]

[workspace.package]
version = "0.1.0-alpha.6"
edition = "2021"
description = "A distributed, Cypher-compliant graph database written in Rust."
license = "MIT"
repository = "https://github.com/mesh-db/mesh"

[workspace.dependencies]
# Internal crates. Version is required (in addition to `path`) so
# `cargo package` / `cargo publish` can resolve them against crates.io
# when path deps are stripped on publish.
meshdb-core = { path = "crates/meshdb-core", version = "0.1.0-alpha.6" }
meshdb-storage = { path = "crates/meshdb-storage", version = "0.1.0-alpha.6" }
meshdb-cypher = { path = "crates/meshdb-cypher", version = "0.1.0-alpha.6" }
meshdb-executor = { path = "crates/meshdb-executor", version = "0.1.0-alpha.6" }
meshdb-cluster = { path = "crates/meshdb-cluster", version = "0.1.0-alpha.6" }
meshdb-rpc = { path = "crates/meshdb-rpc", version = "0.1.0-alpha.6" }
meshdb-bolt = { path = "crates/meshdb-bolt", version = "0.1.0-alpha.6" }

thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.13", default-features = false }
bcrypt = { version = "0.15", default-features = false, features = ["std"] }
# chrono: only pulled in for ISO 8601 / RFC 3339 string parsing in
# the meshdb-executor temporal scalar functions (`datetime(string)`,
# `date(string)`). Storage and wire formats use raw epoch counts, so
# chrono never touches the persistence path.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# chrono-tz: IANA zone database used by `datetime({..., timezone:
# 'Europe/Stockholm'})`. Resolves the instant-specific offset at the
# supplied wall-clock and round-trips the region name through the
# `[Region/City]` suffix on output.
chrono-tz = { version = "0.10", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
