[package]
name = "mesh-bolt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bolt wire protocol implementation (PackStream encoding, chunked framing, handshake, message types) for Mesh"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
