[package]
name = "mesh-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cluster membership and partitioning for Mesh"

[dependencies]
mesh-core = { path = "../mesh-core" }
openraft = { version = "0.9", features = ["serde"] }
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
