[package]
name = "mesh-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Physical operators and query execution for Mesh"

[dependencies]
mesh-core = { workspace = true }
mesh-storage = { workspace = true }
mesh-cypher = { workspace = true }
serde = { workspace = true }
thiserror.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
regex = "1"

[dev-dependencies]
tempfile = "3"
