[package]
name = "mesh-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC services for Mesh"

[dependencies]
mesh-core = { path = "../mesh-core" }
mesh-storage = { path = "../mesh-storage" }
mesh-cypher = { path = "../mesh-cypher" }
mesh-executor = { path = "../mesh-executor" }
mesh-cluster = { path = "../mesh-cluster" }
openraft = { version = "0.9", features = ["serde", "loosen-follower-log-revert"] }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
rustls = "0.23"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
tempfile = "3"
prometheus = { workspace = true }
once_cell = "1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
