[package]
name = "mesh-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mesh graph database server binary"

[[bin]]
name = "mesh-server"
path = "src/main.rs"

[lib]
name = "mesh_server"
path = "src/lib.rs"

[dependencies]
mesh-core = { workspace = true }
mesh-storage = { workspace = true }
mesh-cluster = { workspace = true }
mesh-rpc = { workspace = true }
mesh-bolt = { workspace = true }
mesh-executor = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1"] }
bcrypt = { workspace = true }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
mesh-bolt = { workspace = true }
reqwest = { version = "0.12", default-features = false }
bcrypt = { workspace = true }
rcgen = "0.13"
rustls-pki-types = "1"
