[package]
name = "mesh-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RocksDB-backed storage engine for Mesh"

[dependencies]
mesh-core = { path = "../mesh-core" }
rocksdb = "0.23"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
