[package]
name = "mesh-tck"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "openCypher TCK (Technology Compatibility Kit) runner for Mesh"

[dependencies]
mesh-core = { path = "../mesh-core" }
mesh-storage = { path = "../mesh-storage" }
mesh-cypher = { path = "../mesh-cypher" }
mesh-executor = { path = "../mesh-executor" }
tempfile = "3"
cucumber = "0.21"
futures = "0.3"
regex = "1"
chrono = { workspace = true }

[[test]]
name = "tck"
harness = false
