[package]
name = "mesh-tck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "openCypher TCK (Technology Compatibility Kit) runner for Mesh"

[dependencies]
mesh-core = { workspace = true }
mesh-storage = { workspace = true }
mesh-cypher = { workspace = true }
mesh-executor = { workspace = true }
tempfile = "3"
cucumber = "0.21"
futures = "0.3"
regex = "1"
chrono = { workspace = true }

[[test]]
name = "tck"
harness = false
