[package]
name = "meshdb-apoc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "APOC-compatible procedures and scalar functions for Mesh Cypher"

[dependencies]
meshdb-core = { workspace = true }
thiserror.workspace = true
regex = { version = "1", optional = true }
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[features]
# Per-namespace opt-in. Each feature gates the module that
# implements that `apoc.<namespace>.*` surface, so a build with
# `--features coll` compiles only the collection helpers and
# leaves every other namespace as an unknown-function error.
default = []

# `apoc.coll.*` — sum / avg / max / min / toSet / sort / sortDesc /
# reverse / contains / union / intersection / subtract / flatten.
coll = []

# `apoc.text.*` — join / split / replace / indexOf / lpad / rpad /
# capitalize[All] / decapitalize / swapCase / camelCase / snakeCase /
# upperCamelCase / repeat / reverse / urlencode / urldecode /
# regexGroups / hexValue. Pulls in `regex` for the pattern-based
# ones; `urlencode` / `urldecode` are hand-rolled so we don't need
# a separate crate for percent-escapes.
text = ["dep:regex"]

# `apoc.map.*` — merge / fromPairs / fromLists / fromValues /
# setKey / removeKey / removeKeys / values / submap / mergeList.
# Pure HashMap transforms, no extra deps.
map = []

# `apoc.util.*` — cryptographic digest helpers: md5 / sha1 /
# sha256 / sha384 / sha512. Each function hashes its String
# argument and returns the lower-case hex digest. Pulls in the
# RustCrypto `md-5` / `sha1` / `sha2` crates only when enabled.
util = ["dep:md-5", "dep:sha1", "dep:sha2"]

# `apoc.convert.*` — JSON serialization helpers: toJson /
# fromJsonMap / fromJsonList. Round-trips Property scalars, lists,
# and maps through `serde_json`. Temporal and spatial values are
# rejected with a TypeMismatch in this release — they need a
# shared formatter in `meshdb-core` first.
convert = ["dep:serde_json"]

# `apoc.date.*` — epoch-millis helpers: currentTimestamp /
# toISO8601 / fromISO8601 / convert / add. Units ms/s/min/h/d/w.
# Uses `chrono` for the ISO 8601 round-trip; the arithmetic /
# unit-conversion helpers are pure integer math.
date = ["dep:chrono"]

# Umbrella convenience: everything we ship today. Add new
# namespace features to this list as they land so
# `--features full` keeps its "turn on everything" meaning.
full = ["coll", "text", "map", "util", "convert", "date"]
