[package]
name = "meshdb-apoc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "APOC-compatible procedures and scalar functions for Mesh Cypher"

[dependencies]
meshdb-core = { workspace = true }
thiserror.workspace = true
regex = { version = "1", optional = true }
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
# Defaults to the full surface — depending on `meshdb-apoc`
# without `default-features = false` gets every shipped
# namespace compiled in. Embedded callers wanting a slimmer
# build can disable defaults and pick specific namespaces.
# Each feature gates the module that implements that
# `apoc.<namespace>.*` surface; a `--no-default-features`
# build with no per-namespace opt-ins leaves every namespace
# as an unknown-function error.
default = ["full"]

# `apoc.coll.*` — sum / avg / max / min / toSet / sort / sortDesc /
# reverse / contains / union / intersection / subtract / flatten.
coll = []

# `apoc.text.*` — join / split / replace / indexOf / lpad / rpad /
# capitalize[All] / decapitalize / swapCase / camelCase / snakeCase /
# upperCamelCase / repeat / reverse / urlencode / urldecode /
# regexGroups / hexValue. Pulls in `regex` for the pattern-based
# ones; `urlencode` / `urldecode` are hand-rolled so we don't need
# a separate crate for percent-escapes.
text = ["dep:regex"]

# `apoc.map.*` — merge / fromPairs / fromLists / fromValues /
# setKey / removeKey / removeKeys / values / submap / mergeList.
# Pure HashMap transforms, no extra deps.
map = []

# `apoc.util.*` — cryptographic digest helpers: md5 / sha1 /
# sha256 / sha384 / sha512. Each function hashes its String
# argument and returns the lower-case hex digest. Pulls in the
# RustCrypto `md-5` / `sha1` / `sha2` crates only when enabled.
util = ["dep:md-5", "dep:sha1", "dep:sha2"]

# `apoc.convert.*` — JSON serialization helpers: toJson /
# fromJsonMap / fromJsonList. Round-trips Property scalars, lists,
# and maps through `serde_json`. Temporal and spatial values are
# rejected with a TypeMismatch in this release — they need a
# shared formatter in `meshdb-core` first.
convert = ["dep:serde_json"]

# `apoc.date.*` — epoch-millis helpers: currentTimestamp /
# toISO8601 / fromISO8601 / convert / add. Units ms/s/min/h/d/w.
# Uses `chrono` for the ISO 8601 round-trip; the arithmetic /
# unit-conversion helpers are pure integer math.
date = ["dep:chrono"]

# `apoc.number.*` — parseInt (with radix) / parseFloat /
# arabicToRoman / romanToArabic / format. No extra deps; roman
# and format are pure integer/string math, parse* delegates to
# std's `from_str_radix` / `f64::from_str`.
number = []

# `apoc.create.*` — scalar UUID helpers (uuid / uuidBase64 /
# uuidBase64ToHex / uuidHexToBase64). The `apoc.create.*`
# procedures (node / relationship / etc.) aren't in this crate —
# they'll ship through the executor's procedure registry when
# they land. Base64 is hand-rolled for the 16-byte UUID case so
# we don't pull in a separate base64 crate.
create = ["dep:uuid"]

# `apoc.meta.*` — value type introspection: type / isType / types.
# Pure match over `Property` variants, no extra deps. The graph-
# walking side of `apoc.meta.*` (schema / nodeTypeProperties /
# relTypeProperties) belongs in the executor's procedure
# registry, not here.
meta = []

# Umbrella convenience: everything we ship today. Add new
# namespace features to this list as they land so
# `--features full` keeps its "turn on everything" meaning.
full = ["coll", "text", "map", "util", "convert", "date", "number", "create", "meta"]
