[package]
name = "meshdb-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI client for Bolt-compatible graph databases (Mesh, Neo4j)"

[[bin]]
name = "meshdb-client"
path = "src/main.rs"

[dependencies]
meshdb-bolt = { workspace = true }

ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"

tokio = { workspace = true }
futures = "0.3"
async-trait = "0.1"

tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"

serde = { workspace = true }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
