[package]
name = "meshdb-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC services for Mesh"

[dependencies]
meshdb-core = { workspace = true }
meshdb-storage = { workspace = true }
meshdb-cypher = { workspace = true }
meshdb-executor = { workspace = true }
meshdb-cluster = { workspace = true }
openraft = { version = "0.9", features = ["serde", "loosen-follower-log-revert"] }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
rustls = "0.23"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
tempfile = "3"
prometheus = { workspace = true }
once_cell = "1"
chrono = { workspace = true }

[features]
# Trigger support — forwards to meshdb-executor's feature.
# When on, the commit path fires registered after-phase
# triggers in single-node mode (Routing / Raft deferred —
# documented in the `apoc_trigger` module).
apoc-trigger = ["meshdb-executor/apoc-trigger"]

# Expose the test-only 2PC fault-injection surface (the
# `FaultPoints` struct + the crash-point checks inside the
# coordinator and participant). Gated so a release build of
# meshdb-rpc has zero fault-inject surface; enabled by the
# meshdb-server dev-dependency row for the
# `two_pc_fault_injection` integration test.
fault-inject = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { workspace = true }

[[bench]]
name = "query_bench"
harness = false

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
