[package]
name = "meshdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mesh graph database server binary"

[[bin]]
name = "meshdb-server"
path = "src/main.rs"

[lib]
name = "meshdb_server"
path = "src/lib.rs"

[dependencies]
meshdb-core = { workspace = true }
meshdb-storage = { workspace = true }
meshdb-cluster = { workspace = true }
meshdb-rpc = { workspace = true }
meshdb-bolt = { workspace = true }
meshdb-executor = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1"] }
bcrypt = { workspace = true }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
meshdb-bolt = { workspace = true }
reqwest = { version = "0.12", default-features = false }
bcrypt = { workspace = true }
rcgen = "0.13"
rustls-pki-types = "1"

[features]
# APOC-compatible scalars are split per namespace. Pick the subset
# you want or turn everything on with `--features apoc`. Default
# builds stay lean.
#
# Examples:
#   cargo install meshdb-server --features apoc        # everything
#   cargo install meshdb-server --features apoc-coll   # just apoc.coll.*
default = []
apoc-coll = ["meshdb-executor/apoc-coll"]
apoc-text = ["meshdb-executor/apoc-text"]
apoc-map = ["meshdb-executor/apoc-map"]
apoc-util = ["meshdb-executor/apoc-util"]
apoc-convert = ["meshdb-executor/apoc-convert"]
apoc = ["meshdb-executor/apoc"]
